--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ nav li:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background:  url('../img/showcase-background.png');
+  /*background:  url('../img/showcase-background.png');*/
   opacity: 0.5;
   z-index: -1;
   overflow: hidden;
@@ -220,21 +220,21 @@ nav li:hover {
 }
 
 #project1::before {
-    content: 'Project 1 : PHOTO GALLERY';
+    /*content: 'Project 1 : PHOTO GALLERY';*/
     position: absolute;
     padding: 20px;
     font-size: 18px;
 }
 
 #project2::before {
-    content: 'Project 2 : COFFEE CLUB';
+    /*content: 'Project 2 : COFFEE CLUB';*/
     position: absolute;
     padding: 20px;
     font-size: 18px;
 }
 
 #project3::before {
-    content: 'Project 3 : CALCULATOR APP';
+    /*content: 'Project 3 : CALCULATOR APP';*/
     color: #000;
     position: absolute;
     padding: 20px;
@@ -244,7 +244,7 @@ nav li:hover {
 }
 
 #project4::before {
-    content: 'Project 4 : TBC';
+    /*content: 'Project 4 : TIC TAC TOE GAME';*/
     position: absolute;
     padding: 20px;
     font-size: 18px;
